Add new pictures and revision

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<li>
 							<ul class="address-text">
 								<li><b>D.O.B</b></li>
-								<li>-28-01-1998</li>
+								<li>28-01-1998</li>
 							</ul>
 						</li>
 						<li>
@@ -136,7 +136,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 											<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis.</p>
 											<ul>
 												<li><a class="a-btn-a scroll" href="#port">My Work</a></li>
-												<li><a class="a-btn-h scroll" href="#contact">Hire Me</a></li>
+												<li><a class="a-btn-h scroll" href="#contact">Contact Me</a></li>
 											</ul>
 										</div>
 					                </div>
@@ -146,7 +146,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 											<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis.</p>
 											<ul>
 												<li><a class="a-btn-a scroll" href="#port">My Work</a></li>
-												<li><a class="a-btn-h scroll" href="#contact">Hire Me</a></li>
+												<li><a class="a-btn-h scroll" href="#contact">Contact Me</a></li>
 											</ul>
 										</div>
 					                </div>
@@ -156,7 +156,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 											<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis.</p>
 											<ul>
 												<li><a class="a-btn-a scroll" href="#port">My Work</a></li>
-												<li><a class="a-btn-h scroll" href="#contact">Hire Me</a></li>
+												<li><a class="a-btn-h scroll" href="#contact">Contact Me</a></li>
 											</ul>
 										</div>
 					                </div>
@@ -199,8 +199,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div id="services" class="services">
 				<div class="container">
 					<div class="service-head one text-center ">
-						<h4>WHAT I DO</h4>
-						<h3>MY <span>SERVICES</span></h3>
+						<!-- <h4>WHAT I DO</h4> -->
+						<h3>MY <span>OBJECTIVE</span></h3>
 						<span class="border two"></span>
 					</div>
 					<!-- services-grids -->
@@ -212,7 +212,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						</div>
 					</div>
 					<div class="col-xs-8 wthree_about_right_grid_right">
-						<h4>Web Design</h4>
+						<h4>Bioinformatics</h4>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim.</p>
 					</div>
 					<div class="clearfix"> </div>
@@ -224,7 +224,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						</div>
 					</div>
 					<div class="col-xs-8 wthree_about_right_grid_right">
-						<h4>Web Design</h4>
+						<h4>DATA SCIENCE</h4>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim.</p>
 					</div>
 					<div class="clearfix"> </div>
@@ -236,7 +236,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						</div>
 					</div>
 					<div class="col-xs-8 wthree_about_right_grid_right">
-						<h4>Web Design</h4>
+						<h4>ANDROID APP</h4>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim.</p>
 					</div>
 					<div class="clearfix"> </div>
@@ -248,7 +248,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						</div>
 					</div>
 					<div class="col-xs-8 wthree_about_right_grid_right">
-						<h4>Web Design</h4>
+						<h4>UNITY GAME DESIGN</h4>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim.</p>
 					</div>
 					<div class="clearfix"> </div>
@@ -264,7 +264,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<div id="work" class="work">
 		<div class="container">
 			<div class="service-head text-center">
-						<h4>WHAT I DID</h4>
+						<!-- <h4>WHAT I DID</h4> -->
 						<h3>MY <span>EXPERIENCE</span></h3>
 						<span class="border one"></span>
 					</div>
@@ -350,7 +350,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<!-- portfolio -->
 <div class="portfolio" id="port">
 				<div class="service-head text-center">
-						<h4>MY WORKS</h4>
+						<!-- <h4>MY WORKS</h4> -->
 						<h3>MY <span>PORTFOLIO</span></h3>
 						<span class="border"></span>
 					</div>
@@ -370,9 +370,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<div id="horizontalTab" style="display: block; width: 100%; margin: 0px;">
 						<ul class="resp-tabs-list">
 							<li class="resp-tab-item" aria-controls="tab_item-0" role="tab"><span>ALL</span></li> 
-							<li class="resp-tab-item" aria-controls="tab_item-1" role="tab"><span>WEB DESIGN</span></li> 
-							<li class="resp-tab-item" aria-controls="tab_item-2" role="tab"><span>MOBILE UI</span></li> 				
-							<li class="resp-tab-item" aria-controls="tab_item-3" role="tab"><span>ILLUSTRATIONS</span></li> 
+							<li class="resp-tab-item" aria-controls="tab_item-1" role="tab"><span>BIOINFORMATICS</span></li> 
+							<li class="resp-tab-item" aria-controls="tab_item-2" role="tab"><span>DATA SCIENCE</span></li> 				
+							<li class="resp-tab-item" aria-controls="tab_item-3" role="tab"><span>ANDROID APP</span></li> 
+							<li class="resp-tab-item" aria-controls="tab_item-3" role="tab"><span>UNITY GAME</span></li> 
 						</ul>				  	 
 						<div class="resp-tabs-container">
 							<div class="tab-1 resp-tab-content" aria-labelledby="tab_item-0">
@@ -523,7 +524,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="blog" id="blogs">
 					<div class="container">
 						<div class="service-head text-center">
-						<h4>BLOGS</h4>
+						<!-- <h4>BLOGS</h4> -->
 						<h3>MY <span>BLOGS</span></h3>
 						<span class="border one"></span>
 					</div>
@@ -619,7 +620,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <div class="footer" id="contact">
 	<div class="container">
 	<div class="service-head one text-center">
-						<h4>CONTACT ME</h4>
+						<!-- <h4>CONTACT ME</h4> -->
 						<h3>GET <span>IN TOUCH WITH ME</span></h3>
 						<span class="border two"></span>
 					</div>
